--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "deprem-tracker",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "dependencies": {
     "@mostfeatured/bundler": "^1.1.3",
@@ -19,5 +18,15 @@
     "push": "git add . && git commit -m \"update\" && git push origin master"
   },
   "author": "ErdemGKSL",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ErdemGKSL/deprem-tracker.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ErdemGKSL/deprem-tracker/issues"
+  },
+  "homepage": "https://github.com/ErdemGKSL/deprem-tracker#readme",
+  "description": ""
 }
